# hmm-vola-spikes

./: .gitignore  MANIFEST.in  README.md  environment.yml  fit_model.py  mkdocs.yml  pyproject.toml  requirements.txt
app/: app.py
app/markdown/: findings_HMMModel.md  findings_LayeredHMMModel.md
config/: data.yaml  model.yaml  visualization_config.yaml
docs/: data.md  index.md  model.md
results/HMMModel/transition_matrices/: AAPL_transition_matrix_layer0.csv  AMZN_transition_matrix_layer0.csv  GSPC_transition_matrix_layer0.csv  MSFT_transition_matrix_layer0.csv  VIX_transition_matrix_layer0.csv
results/HierarchicalHMMModel/transition_matrices/: AAPL_transition_matrix_layer0.csv  AMZN_transition_matrix_layer0.csv  GSPC_transition_matrix_layer0.csv  MSFT_transition_matrix_layer0.csv  VIX_transition_matrix_layer0.csv
results/LayeredHMMModel/transition_matrices/: AAPL_transition_matrix_layer0.csv  AAPL_transition_matrix_layer1.csv  AMZN_transition_matrix_layer0.csv  AMZN_transition_matrix_layer1.csv  GSPC_transition_matrix_layer0.csv  (+5 more)
results/csv/: AAPL_regime_states.csv  AAPL_transition_matrix.csv  AMZN_regime_states.csv  AMZN_transition_matrix.csv  GSPC_transition_matrix.csv  MSFT_regime_states.csv  MSFT_transition_matrix.csv  ^GSPC_regime_states.csv  ^VIX_regime_states.csv
results_HMMModel/csv/: AAPL_regime_states.csv  AAPL_transition_matrix.csv  AMZN_regime_states.csv  AMZN_transition_matrix.csv  GSPC_regime_states.csv  GSPC_transition_matrix.csv  MSFT_regime_states.csv  MSFT_transition_matrix.csv  VIX_regime_states.csv
scr/hmmstock/: datamanager.py  metrics.py
src/hmmstock/: __init__.py  datamanager.py  hhmm_model.py  hmm_model.py  iv_datamanger.py  lhmm_model.py  market_vola_proxy_calcs.py  metrics.py  model.py  path_manager.py  stat_testing.py  volatility_normalizer.py
(+21 files in other folders)
